smt - adds user authentication with keycloak

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: store-management-tool
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/ING
 
   datasource:
     url: jdbc:postgresql://localhost:5432/storemanagerdb
