--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Spring Boot Actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Mockito Core -->
 		<dependency>
 			<groupId>org.mockito</groupId>
